# backend/src/admin/authRoutes.js
@@ -3,6 +3,6 @@ const { adminLogin } = require('../controllers/adminAuthController');
 
 const router = express.Router();
 
-router.post('/admin/auth/login', adminLogin);
+router.post('/v1/admin/auth/login', adminLogin);
 
 module.exports = router;
